@@ -395,6 +395,17 @@ input:hover.g-button, input:focus.g-button {
 	border: 1px solid #99f;
 }
 
+.g-pwcheck {
+	display: none;
+	border: 1px solid black;
+	color:black;
+}
+
+.g-disabled {
+    color: gray;
+    text-align: center;
+}
+
 .g-locked {
 	text-decoration: line-through;
 	background: url('../images/icons/locked.gif') no-repeat right center;
