@@ -1,3 +1,9 @@
+2008-08-11 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b2
+
+ * Fix: Strenghtmeter not working.
+
+ * Fix: Added strengthmeter for admin password in setup.
+
 2008-08-11 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b1
 
  * Fix: Ecard broken. Popup was empty, preview broken.
